@@ -1,5 +1,4 @@
-﻿
-using System.IO;
+﻿using System.IO;
 using System.Xml.Serialization;
 using System.Xml;
 using ColossalFramework;
